test/sema/typeck/return/return-missing-value.out
error: `return` expects value of type `Int32` but got `()`.
--> return-missing-value.dora:1:17
 | fn f(): Int32 { return; }
                   ~~~~~~
 | 
1 error found.
