test/sema/typeck/return/return-missing-value.dora
fn f(): Int32 { return; }
